--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body
     top: 0;
     width: 980px;
     min-width: 100%;
-    height: 580px;
+    height: 590px;
     margin: 0;
     padding: 0;
     background: url('terrain/terrain.jpg') no-repeat;
@@ -137,6 +137,10 @@ h3
     bottom: 0;
 }
 
+#goku img, #jiren img
+{
+    display: none;
+}
 
 #goku
 {
@@ -177,15 +181,30 @@ p
 {
     position: absolute;
     width: 100%;
-    height: 555px;
+    height: 643px;
     top: 0;
     left: 0;
-    padding-top: 100px;
     text-align: center;
     font-family: Comic Sans MS;
     font-size: 75px;
     background: rgb(0,0,0);
     background: rgba(0,0,0,0.8);
+}
+
+#fin
+{
+    padding-top: 100px;
+}
+
+table
+{
+    margin: auto;
+}
+
+td
+{
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #fight
