--- a/style.css
+++ b/style.css
@@ -450,3 +450,71 @@ ul li:hover button
     text-shadow: 0 0 15px #0ba710;
     box-shadow: 0 0 5px #0ba710;
 }
+
+/* Ready & Fight texts */
+
+#ready_game_page
+{
+    position: absolute;
+    left: 0;
+    top: 0;
+    min-width: 100%;
+    min-height: 120%;
+    background: #1010109a;
+    display: none;
+    z-index: 1;
+}
+
+#ready_text, #fight_text
+{
+    position: absolute;
+    top: 30%;
+    left: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100px;
+    text-align: center;
+    text-shadow: 0 0 5px #0ba710;
+    color: rgba(192, 192, 192, 0.959);
+    transform: skewX(-30deg);
+    width: 100%;
+    overflow: hidden;
+}
+
+@keyframes ready_text_animation {
+    0%
+    {
+        left: 100%;
+    }
+    15%
+    {
+        left: 0;
+    }
+    90%
+    {
+        left: 0;
+    }
+    100%
+    {
+        left: -100%;
+    }
+}
+
+@keyframes fight_text_animation {
+    0%
+    {
+        left: 100%;
+    }
+    15%
+    {
+        left: 0;
+    }
+    90%
+    {
+        left: 0;
+    }
+    100%
+    {
+        left: -100%;
+    }
+}
+
