--- a/style.css
+++ b/style.css
@@ -619,11 +619,11 @@ ul li:hover button
     cursor: pointer;
 }
 
-#play_game_button
+#return_game_button, #play_game_button
 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    width: 50%;
+    width: 30%;
     color: #707070;
     background: #080808;
     border-top: 3px solid #104010;
@@ -631,10 +631,10 @@ ul li:hover button
     border-left: 3px solid #101010;
     border-right: 3px solid #101010;
     padding: 5px 0;
-    margin: 0;
+    margin: 0 10px;
 }
 
-#play_game_button:hover
+#return_game_button:hover, #play_game_button:hover
 {
     cursor: pointer;
     color: silver;
